rs/ethexe/macros-tests/tests/snapshots/service_insta__works_with_extends.snap
---
source: macros-tests/tests/service_insta.rs
expression: result
---
pub struct SomeServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for SomeServiceExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &T::BASE_SERVICES[0usize],
                id,
            ) => {
                return <<ExtendedService1 as sails::gstd::services::Service>::Exposure as sails::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &T::BASE_SERVICES[1usize],
                id,
            ) => {
                return <<ExtendedService2 as sails::gstd::services::Service>::Exposure as sails::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for SomeServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for SomeServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
#[allow(clippy::from_over_into)]
impl Into<ExtendedService1> for SomeServiceExposure<SomeService> {
    fn into(self) -> ExtendedService1 {
        self.inner.into()
    }
}
#[allow(clippy::from_over_into)]
impl Into<ExtendedService2> for SomeServiceExposure<SomeService> {
    fn into(self) -> ExtendedService2 {
        self.inner.into()
    }
}
impl SomeServiceExposure<SomeService> {
    #[export]
    pub fn do_this(&mut self) -> u32 {
        42
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::SomeService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: some_service_meta::__DoThisParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.do_this();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        some_service_meta::__DoThisParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: ExtendedService1 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[1usize],
                id,
            ) => {
                let base_service: ExtendedService2 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: ExtendedService1 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[1usize],
                id,
            ) => {
                let base_service: ExtendedService2 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            _ => None,
        }
    }
    pub fn try_handle_solidity(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        input: &[u8],
    ) -> Option<(sails::Vec<u8>, u128, bool)> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::SomeService as sails::meta::Identifiable>::INTERFACE_ID => {
                let (__encode_reply,): (bool,) = sails::alloy_sol_types::SolValue::abi_decode_params(
                        input,
                    )
                    .ok()?;
                #[cfg(target_arch = "wasm32")]
                if sails::gstd::msg::value() > 0 {
                    core::panic!("'do_this' accepts no value");
                }
                let result = self.do_this();
                let value = 0u128;
                let output = if __encode_reply {
                    let message_id = sails::alloy_primitives::B256::new(
                        sails::gstd::Syscall::message_id().into_bytes(),
                    );
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(
                        &(message_id, result),
                    )
                } else {
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(&(result,))
                };
                return Some((output, value, __encode_reply));
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: ExtendedService1 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_solidity(interface_id, entry_id, input);
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[1usize],
                id,
            ) => {
                let base_service: ExtendedService2 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_solidity(interface_id, entry_id, input);
            }
            _ => None,
        }
    }
    pub async fn try_handle_solidity_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        input: &[u8],
    ) -> Option<(sails::Vec<u8>, u128, bool)> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: ExtendedService1 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_solidity_async(interface_id, entry_id, input)
                    .await;
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::SomeService as sails::meta::ServiceMeta>::BASE_SERVICES[1usize],
                id,
            ) => {
                let base_service: ExtendedService2 = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_solidity_async(interface_id, entry_id, input)
                    .await;
            }
            _ => None,
        }
    }
}
impl sails::gstd::services::Service for SomeService {
    type Exposure = SomeServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod some_service_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails::hash_fn!(command DoThis() -> u32));
        final_hash = final_hash
            .update(
                &<super::ExtendedService1 as sails::meta::Identifiable>::INTERFACE_ID.0,
            );
        final_hash = final_hash
            .update(
                &<super::ExtendedService2 as sails::meta::Identifiable>::INTERFACE_ID.0,
            );
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl sails::meta::Identifiable for super::SomeService {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl sails::meta::ServiceMeta for super::SomeService {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[
            sails::meta::BaseServiceMeta::new::<
                super::ExtendedService1,
            >("ExtendedService1"),
            sails::meta::BaseServiceMeta::new::<
                super::ExtendedService2,
            >("ExtendedService2"),
        ];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "DoThis",
                entry_id: 0u16,
                hash: sails::hash_fn!(command DoThis() -> u32),
                is_async: false,
            },
        ];
        const ASYNC: bool = <super::ExtendedService1 as sails::meta::ServiceMeta>::ASYNC
            || <super::ExtendedService2 as sails::meta::ServiceMeta>::ASYNC;
    }
    sails::invocation_io!(
        pub struct __DoThisParams {}, interface_id = __INTERFACE_ID, entry_id = 0u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
impl sails::solidity::ServiceSignature for SomeService {
    const METHODS: &'static [sails::solidity::MethodExpo] = sails::const_concat_slices!(
        < sails::solidity::MethodExpo >, & [(< SomeService as sails::meta::Identifiable >
        ::INTERFACE_ID, 0u16, "DoThis", << (bool,) as sails::alloy_sol_types::SolValue >
        ::SolType as sails::alloy_sol_types::SolType > ::SOL_NAME, <<
        (sails::alloy_primitives::B256, u32) as sails::alloy_sol_types::SolValue >
        ::SolType as sails::alloy_sol_types::SolType > ::SOL_NAME,),], < ExtendedService1
        as sails::solidity::ServiceSignature > ::METHODS, < ExtendedService2 as
        sails::solidity::ServiceSignature > ::METHODS
    );
}
