rs/ethexe/macros-tests/tests/snapshots/service_insta__works_with_extends_and_lifetimes.snap
---
source: macros-tests/tests/service_insta.rs
expression: result
---
pub struct ExtendedWithLifetimeExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for ExtendedWithLifetimeExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 1u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &T::BASE_SERVICES[0usize],
                id,
            ) => {
                return <<BaseWithLifetime as sails::gstd::services::Service>::Exposure as sails::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for ExtendedWithLifetimeExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for ExtendedWithLifetimeExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
#[allow(clippy::from_over_into)]
impl<'a> Into<BaseWithLifetime<'a>>
for ExtendedWithLifetimeExposure<ExtendedWithLifetime<'a>> {
    fn into(self) -> BaseWithLifetime<'a> {
        self.inner.into()
    }
}
impl<'a> ExtendedWithLifetimeExposure<ExtendedWithLifetime<'a>> {
    #[export]
    pub fn extended_name(&self) -> String {
        "extended-name".to_string()
    }
    #[export]
    pub fn name(&self) -> String {
        "extended".to_string()
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: extended_with_lifetime_meta::__ExtendedNameParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.extended_name();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<String>() {
                    sails::gstd::encode_invocation_payload::<
                        extended_with_lifetime_meta::__ExtendedNameParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                1u16,
            ) if id
                == <self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: extended_with_lifetime_meta::__NameParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.name();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<String>() {
                    sails::gstd::encode_invocation_payload::<
                        extended_with_lifetime_meta::__NameParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseWithLifetime<'a> = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseWithLifetime<'a> = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            _ => None,
        }
    }
    pub fn try_handle_solidity(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        input: &[u8],
    ) -> Option<(sails::Vec<u8>, u128, bool)> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let (__encode_reply,): (bool,) = sails::alloy_sol_types::SolValue::abi_decode_params(
                        input,
                    )
                    .ok()?;
                #[cfg(target_arch = "wasm32")]
                if sails::gstd::msg::value() > 0 {
                    core::panic!("'extended_name' accepts no value");
                }
                let result = self.extended_name();
                let value = 0u128;
                let output = if __encode_reply {
                    let message_id = sails::alloy_primitives::B256::new(
                        sails::gstd::Syscall::message_id().into_bytes(),
                    );
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(
                        &(message_id, result),
                    )
                } else {
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(&(result,))
                };
                return Some((output, value, __encode_reply));
            }
            (
                id,
                1u16,
            ) if id
                == <self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let (__encode_reply,): (bool,) = sails::alloy_sol_types::SolValue::abi_decode_params(
                        input,
                    )
                    .ok()?;
                #[cfg(target_arch = "wasm32")]
                if sails::gstd::msg::value() > 0 {
                    core::panic!("'name' accepts no value");
                }
                let result = self.name();
                let value = 0u128;
                let output = if __encode_reply {
                    let message_id = sails::alloy_primitives::B256::new(
                        sails::gstd::Syscall::message_id().into_bytes(),
                    );
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(
                        &(message_id, result),
                    )
                } else {
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(&(result,))
                };
                return Some((output, value, __encode_reply));
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseWithLifetime<'a> = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_solidity(interface_id, entry_id, input);
            }
            _ => None,
        }
    }
    pub async fn try_handle_solidity_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        input: &[u8],
    ) -> Option<(sails::Vec<u8>, u128, bool)> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::ExtendedWithLifetime<
                    'a,
                > as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseWithLifetime<'a> = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_solidity_async(interface_id, entry_id, input)
                    .await;
            }
            _ => None,
        }
    }
}
impl<'a> sails::gstd::services::Service for ExtendedWithLifetime<'a> {
    type Exposure = ExtendedWithLifetimeExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod extended_with_lifetime_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails::hash_fn!(query ExtendedName() -> String));
        final_hash = final_hash.update(&sails::hash_fn!(query Name() -> String));
        final_hash = final_hash
            .update(
                &<super::BaseWithLifetime as sails::meta::Identifiable>::INTERFACE_ID.0,
            );
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl<'a> sails::meta::Identifiable for super::ExtendedWithLifetime<'a> {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl<'a> sails::meta::ServiceMeta for super::ExtendedWithLifetime<'a> {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[
            sails::meta::BaseServiceMeta::new::<
                super::BaseWithLifetime,
            >("BaseWithLifetime"),
        ];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "ExtendedName",
                entry_id: 0u16,
                hash: sails::hash_fn!(query ExtendedName() -> String),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "Name",
                entry_id: 1u16,
                hash: sails::hash_fn!(query Name() -> String),
                is_async: false,
            },
        ];
        const ASYNC: bool = <super::BaseWithLifetime as sails::meta::ServiceMeta>::ASYNC;
    }
    sails::invocation_io!(
        pub struct __ExtendedNameParams {}, interface_id = __INTERFACE_ID, entry_id =
        0u16,
    );
    sails::invocation_io!(
        pub struct __NameParams {}, interface_id = __INTERFACE_ID, entry_id = 1u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {
        ExtendedName(__ExtendedNameParams, String),
        Name(__NameParams, String),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
impl<'a> sails::solidity::ServiceSignature for ExtendedWithLifetime<'a> {
    const METHODS: &'static [sails::solidity::MethodExpo] = sails::const_concat_slices!(
        < sails::solidity::MethodExpo >, & [(< ExtendedWithLifetime as
        sails::meta::Identifiable > ::INTERFACE_ID, 0u16, "ExtendedName", << (bool,) as
        sails::alloy_sol_types::SolValue > ::SolType as sails::alloy_sol_types::SolType >
        ::SOL_NAME, << (sails::alloy_primitives::B256, String) as
        sails::alloy_sol_types::SolValue > ::SolType as sails::alloy_sol_types::SolType >
        ::SOL_NAME,), (< ExtendedWithLifetime as sails::meta::Identifiable >
        ::INTERFACE_ID, 1u16, "Name", << (bool,) as sails::alloy_sol_types::SolValue >
        ::SolType as sails::alloy_sol_types::SolType > ::SOL_NAME, <<
        (sails::alloy_primitives::B256, String) as sails::alloy_sol_types::SolValue >
        ::SolType as sails::alloy_sol_types::SolType > ::SOL_NAME,),], < BaseWithLifetime
        as sails::solidity::ServiceSignature > ::METHODS
    );
}
